--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="picture_watch">
                 <img class="img" src="pictures/man-is-putting-watch-his-wrist 1.png" alt="man with watch" />
             </div>
-            <!-- контейнер с картинкой -->
+            <!-- контейнер с картdvsvинкойй -->
             </div>
 
             <div class="footer">
